--- a/index.html
+++ b/index.html
@@ -78,10 +78,11 @@
     </div>
     <section class="cover-back" aria-label="Estadisticas del Pokémon">
       <div class="stats">
-        stats
+        <canvas id="stats" width="200" height="200"></canvas>
       </div>
     </section>
   </main>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
   <script src="./js/index.js" type="module"></script>
 </body>
 </html>
